Update Open Graph image URL in config

--- a/specify-cli-config.json
+++ b/specify-cli-config.json
@@ -16,7 +16,7 @@
     "openGraph": {
       "ogTitle": "Red and Blue – Desarrollo Web a Medida",
       "ogDescription": "Innovación en desarrollo de software: rápido, escalable, seguro y con minimalismo corporativo.",
-      "ogImage": "https://redandblue.com/preview-image.png"
+      "ogImage": "https://redandblue.dev/preview-image.png"
     },
     "robots": "index, follow",
     "sitemap": true
